--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,9 +9,11 @@
  * compiled file, but it's generally better to create a new file per style scope.
 
  *= require twitter-bootstrap-static/bootstrap
- *= require_self
  *= require chosen
- *= require_tree .
+ *= require bootstrap_and_overrides
+ *= require home
+ *= require user_static
+ *= require_self
  */
 
 /*GENERAL STYLES*/
