correct cat bg ref

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -19,7 +19,7 @@
 /*GENERAL STYLES*/
   body {
     font-family: Helvetica;
-    background-image: url('http://subtlepatterns.com/patterns/green_dust_scratch.png')
+    background-image: url('<%= asset_path("subtlepatterns-greendust.png") %>')
   }
 
   a {
