--- a/app/assets/stylesheets/body_bg_change.css.erb
+++ b/app/assets/stylesheets/body_bg_change.css.erb
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/assets/cat-bg.jpg');
+  background-image: url('<%= asset_path("cat-bg.jpg") %>');
   background-size: cover;
   background-repeat: no-repeat
   }
