correct cat bg ref

--- a/app/assets/stylesheets/body_bg_change.css
+++ b/app/assets/stylesheets/body_bg_change.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/assets/cat-bg.jpg');
+  background-image: url('/images/cat-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat
   }
