main homepage layout and individual tweet template fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,11 +25,12 @@
   a {
     text-decoration: none;
     font-family: Helvetica;
+    color: #ce6f56;
   }
 
   a:hover {
-  text-decoration: none;
-  opacity: .8;
+    text-decoration: none;
+    opacity: .8;
   }
 
   hr {
@@ -101,7 +102,7 @@
   }
     #login form button {
       background-color: #a9d8cb;
-      border: 1px solid #CFD6D4;
+      border: 1px solid #B6BBBA;
       padding: 4px;
       color: whitesmoke;
     }
