--- a/app/views/main/welcome.html.erb
+++ b/app/views/main/welcome.html.erb
@@ -1,44 +1,43 @@
 <!-- <#%= javascript_include_tag 'tweets/new_tweet' %>
  -->
-<div class="span4 left_sidebar">
 
-  <div class="home_user_info row span12">
-      <%= link_to @user do %>
-        <div id="home_sidebar_user_info" style="background-image:url('<%=@user.background_photo_url%>')">
-          <img src="<%= @user.profile_photo_url%>" alt=""/>
-          <p><%= @user.name %> <%= "@#{@user.username}" %></p>
-        </div>
-      <% end %>
-
-      <%= link_to @user do %>
-        <div id="home_sidebar_user_stats" class="home_div">
+<div style="min-width:1200px;">
+  <div class="left_sidebar">
+    <div class="home_user_info">
+        <!-- user info-->
+        <%= link_to @user do %>
+          <div class="bg_photo" style="background-image:url('<%=@user.background_photo_url%>')">
+          </div>
+          <div>
+            <img src="<%= @user.profile_photo_url%>" alt="<%= @user.username%>'s photo"/>
+            <p>
+              <strong><%= @user.name.capitalize %></strong>
+              <br><%= "@#{@user.username}" %>
+            </p>
+          </div>
+        <% end %>
+        <!-- user stats -->
+        <%= link_to @user do %>
+          <div id="home_sidebar_user_stats" class="home_div">
+            <li>
+              Tweets<br><span class="numbers"><%= @user.cached_tweets_size %></span>
+            </li>
+        <% end%>
+        <%= link_to user_following_path(@user) do %>
           <li>
-            Tweets
-            <br>
-            <span class="numbers"><%= @user.cached_tweets_size %></span>
+            Following<br><span class="numbers"><%= @user.cached_followers_size %></span>
           </li>
-      <% end%>
-
-      <%= link_to user_following_path(@user) do %>
-        <li>
-          Following
-          <br>
-          <span class="numbers"><%= @user.cached_followers_size %></span>
-        </li>
-      <% end%>
-
-      <%= link_to user_followers_path(@user) do %>
-        <li>
-          Followers
-          <br>
-          <span class="numbers"><%=@user.cached_followings_size %></span>
-        </li>
-      <% end%>
-        </div>
-
+        <% end%>
+        <%= link_to user_followers_path(@user) do %>
+          <li>
+            Followers<br><span class="numbers"><%=@user.cached_followings_size %></span>
+          </li>
+        <% end%>
+      </div>
 
       <div id="tweet_box">
         <%= form_for @path do |f| %>
+        <!-- you cannot pass the contents of a contenteditable input to the server, and this div needs to be contenteditable for the 140 char limit count -->
         <%= f.hidden_field :content %>
         <div id='tweet-content-text' contenteditable='true' role='text'></div>
         <div id="tweet_form_options" class='hide-me'>
@@ -46,19 +45,16 @@
           <%= f.submit "Meow!", id: 'tweet-submit', class: 'btn' %>
           <% end %>
         </div>
-
       </div>
+    </div><!--/.home_user_info -->
 
-    </div><!--/.sidebar_home -->
-
-
-    <div class="who_to_follow sidebar row span12">
-      <p>Who To Follow | <span class="num_link"><%=link_to "View All", users_path%></span></p>
+    <div class="who_to_follow sidebar">
+      <p>Who to Follow | <span class="num_link"><%=link_to "View All", users_path%></span></p>
       <br>
       <% @users.each do |user|  %>
         <% unless current_user == user %>
           <div class="who_to_follow_info">
-            <img src="<%=user.profile_photo_url%>" alt="" />
+            <img src="<%=user.profile_photo_url%>" alt="<%= user.username %>'s  profile photo" />
             <div class="follow">
               <p><%= user.name %> <%= link_to "@#{user.username}", user_path(user)  %></p>
               <br>
@@ -70,32 +66,31 @@
       <% end %>
     </div><!--.who_to_follow sidebar -->
 
-    <div class="sidebar_hashtags sidebar row span12">
-      <h3>Trends</h3>
-      <%@hashtags.each do |hashtag|%>
-        <%= link_to "##{hashtag.content}", hashtag_path(hashtag) %>
+    <div class="sidebar_hashtags sidebar">
+      <h4>Trends</h4>
+      <% @hashtags.each do |h| %>
+        <%= link_to "##{h.content}", hashtag_path(h) %>
         <br>
       <% end %>
     </div>
 
-    <div class="sidebar_footer sidebar row span12">
-       <a href="http://www.trinitymontoya.com">&copy; Trinity Montoya 2014</a>
+    <div class="sidebar_footer sidebar">
+      &copy; Kitter 2014
+       <a href="http://www.trinitymontoya.com">by Trinity Montoya</a>
     </div>
 
-</div><!--/span-->
+  </div><!--/left_sidebar-->
 
-<div class="span7 home_main_content">
+  <div class="home_main_content">
   <%= bootstrap_flash %>
-
-
-  <div class="right_sidebar span9">
-    <h2>Tweets</h2>
-    <% if @tweets %>
-      <% @tweets.each do |tweet| %>
-        <% cache tweet do %>
-          <%= render 'tweets/individual_tweet_template', tweet: tweet %>
+      <h3>Tweets</h3>
+      <hr>
+        <% if @tweets %>
+          <% @tweets.each do |tweet| %>
+            <% cache tweet do %>
+              <%= render 'tweets/individual_tweet_template', tweet: tweet %>
+            <% end %>
+          <% end %>
         <% end %>
-      <% end %>
-    <% end %>
-  </div><!-- .right_sidebar -->
-</div><!-- span6 -->
+  </div><!-- .home_main_content -->
+</div>
