--- a/app/views/main/welcome.html.erb
+++ b/app/views/main/welcome.html.erb
@@ -1,6 +1,3 @@
-<!-- <#%= javascript_include_tag 'tweets/new_tweet' %>
- -->
-
 <div style="min-width:1200px;">
   <div class="left_sidebar">
     <div class="home_user_info">
@@ -88,6 +85,11 @@
         <% if @tweets %>
           <% @tweets.each do |tweet| %>
             <% cache tweet do %>
+              <% if tweet.retweets.first %>
+                <p class="retweet_notice">
+                  <i class="fa fa-retweet"></i> <%= tweet.retweets.first.user.username %> retweeted
+                </p>
+              <% end %>
               <%= render 'tweets/individual_tweet_template', tweet: tweet %>
             <% end %>
           <% end %>
