--- a/app/assets/stylesheets/user_static.css
+++ b/app/assets/stylesheets/user_static.css
@@ -26,7 +26,6 @@ button.user_index_follow {
 
 /*USER TWEET BOX*/
 #tweet-content-text {
-  width: 100%;
   overflow: scroll;
   -moz-appearance: textfield-multiline;
   -webkit-appearance: textarea;
@@ -36,6 +35,10 @@ button.user_index_follow {
   padding: 2px;
   background-color: white;
   resize: none;
+  margin: 10px;
+  border-radius: 6px;
+  height: 40px;
+  font-size: 14px;
 }
 
 .enlarge-form-input {
