--- a/app/views/layouts/user_static.html.erb
+++ b/app/views/layouts/user_static.html.erb
@@ -1,6 +1,6 @@
 
 
-<% content_for :content do %>
+<% content_for :main_layout do %>
   <div class="left_sidebar col-xs-6">
 
     <nav class="user_profile sidebar row span12">
