adjust page views to match new layout templates, add content_for left_sidebar and left_sidebar_top where necessary, as well as new two_column_layout method which renders the layout and necessary instance vars

--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -1,9 +1,21 @@
-<h1>Notifications</h1>
+<% content_for :left_sidebar do %>
+  <% content_for :left_sidebar_top do %>
+    <div class="sidebar left-sidebar-top">
+      <a><h5>Notifications <i class="fa fa-chevron-right"></i></h5></a>
+      <hr>
+      <a><h5>Mentions <i class="fa fa-chevron-right"></i></h5></a>
+    </div>
+  <% end %>
+  <%= render 'shared/main_left_sidebar' %>
+<% end %>
 
+<!-- YIELD -->
+<h1>Notifications</h1>
+<hr>
 <% @all_notifications.each do |notification| %>
   <% if notification.class == Notification %>
     <% if notification.kind == 'retweeted' || notification.kind == 'favorited' %>
-    <div class='row span 12'>
+    <div>
       <%= image_tag("#{notification.kind}.png", size: "20") %>
       <b><%= link_to notification.poster.name, notification.poster %></b>
       <%= notification.kind %> your tweet!
