--- a/app/views/main/join.html.erb
+++ b/app/views/main/join.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag 'body_bg_change'%>
+<%= javascript_include_tag 'users/alphanumericValidate' %>
 
 <div id="front-welcome" class="col-xs-9 col-md-4 col-lg-5 col-sm-5 col-md-offset-1 col-sm-offset-0  col-xs-offset-1">
   <h1>Welcome to Kitter.</h1>
