--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -143,7 +143,7 @@ img.nav_icon{
 
 /*MAIN CONTENT RIGHT SIDEBAR*/
 
-.home_main_content {
+.main_content {
   width: 590px;
   display: inline-block;
   margin-left: 7px;
