update user tweet/follower partials to handle empty values, continue styling navbar tweet modal

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -128,9 +128,49 @@
       }
 
 /*SIGN UP */
-  .tweet-modal form {
-    padding: 50px;
+
+  .tweet-modal {
+    background-color: rgb(204, 235, 227);
   }
+    .tweet-modal form {
+      width: 520px;
+      height: 160px;
+      margin: -15 0 15 0;
+    }
+
+    .tweet-modal p {
+      text-align: center;
+      padding: 10px;
+      border-bottom: 1px solid #ccd6dd;
+      background-color: whitesmoke;
+      border-top-left-radius: 6px;
+      border-top-right-radius: 6px;
+    }
+
+    .tweet-modal input#tweet_content {
+      padding: 8px;
+      width: 568px;
+      margin: 0 16px;
+      height: 110px;
+      word-break: break-word;
+    }
+
+    .tweet-modal input[value="Meow!"] {
+      width: 120px;
+      height: 40px;
+      margin: 10px -63px 0 0px;
+      color: whitesmoke;
+      font-size: 15px;
+      font-weight: bold;
+      background-color: rgb(108, 196, 172);
+    }
+
+    #modal-tweet-char-count {
+      margin: 10px 0 0 415px;
+      display: inline-block;
+      background: none;
+      border: none;
+    }
 
 /*LEFT SIDEBAR*/
 
