--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,7 @@
       <% end %>
     <% end %>
     <div class="container-fluid">
+      <p class="full-notice-<%= params[:action]%>"><%= flash[:notice] %></p>
       <div class="row-fluid">
         <% if current_user %>
           <div class="modal fade" id="newTweetModal" tabindex="-1" role="dialog" aria-labeledby="newTweetModalLabel" aria-hidden="true">
