--- a/app/views/main/welcome.html.erb
+++ b/app/views/main/welcome.html.erb
@@ -40,15 +40,17 @@
 <!-- YIELD -->
 <h3>Tweets</h3>
 <hr>
-  <% if @tweets %>
-    <% @tweets.each do |tweet| %>
-      <% cache tweet do %>
-        <% if tweet.retweets.first %>
-          <p class="retweet_notice">
-            <i class="fa fa-retweet"></i> <%= tweet.retweets.first.user.username %> retweeted
-          </p>
-        <% end %>
-        <%= render 'tweets/individual_tweet_template', tweet: tweet %>
+<% if @tweets %>
+  <% @tweets.each do |tweet| %>
+    <% cache tweet do %>
+      <% if tweet.retweets.first %>
+        <p class="retweet_notice">
+          <i class="fa fa-retweet"></i> <%= tweet.retweets.first.user.username %> retweeted
+        </p>
       <% end %>
+      <%= render 'tweets/individual_tweet_template', tweet: tweet %>
     <% end %>
+  <% end %>
+<% else %>
+  No tweets right now! Get moving!
 <% end %>
